2005-04-03  Fredrik Edemar  <f_edemar@linux.se>
	Changes in the data editor:
    * If the data table only has 1 cell which is empty, the whole chart will be parsed as empty. This makes it possible for the user to clear all data.
    * Allow the user to set an empty string as row/column label.

    ----------------------------------------------------------------

    * KChartPart::initTestChart() is renamed generateBarChartTemplate().
    * Translate two strings in that function.
    * Added commented code for calling generateBarChartTemplate() when the user chooses the bar char template. The advantage of this is that the row/column labels won't be translated otherwise. This feature will be activated in KOffice 1.5/2.0 as Inge thought it is too late for such changes before KOffice 1.4.

2005-03-30 Fredrik Edemar <f_edemar@linux.se>
    In KChartColorConfigPage: do not crash when the OK/Apply button is pressed and disable the KColorButton when there isn't any data to config.

2005-03-25  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 102414: KChart shows the startup dialog even when embedded
	into a spreadsheet. 
	* kchart_part.cc (constructor): Initialize members but don't call
	initDoc().
	(initDoc): don't initialize members, and return immediately if
	called for an embedded chart.

2005-03-24  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 55606: [modified] tag doesn't work correctly.
	* kchartDataEditor.{h,cc} (m_modified): new member
	(modified): new method.
	(tableChanged): new slot
	(misc): set m_modified if data changed, including headers.
	* kchart_part.{h,cc} (slotModified): new slot
	(setData): connect wizard::finished() with slotModified
	* kchart_view.cc (edit, apply, wizard): call setModified() in document

2005-03-23  Inge Wallin  <inge@lysator.liu.se>

	Implement wish 45358: KChart start up dialog?
	* kchart_part.cc (initNullChart): New method
	(initDoc): Call KoTemplateChooseDia().
	* kchart_view.cc (KChartView): Don't initialize the standard chart.
