@@ -1,5 +1,8 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="KChart" version="12">
 <MenuBar>
+  <Menu name="file"><text>&amp;File</text>
+    <Action name="extra_template"/>
+ </Menu>
  <Menu name="Edit"><text>&amp;Edit</text>
   <Action name="edit"/>
   <Menu name="action_popup"><text>&amp;Chart</text>
